fixed dropdowns z-index

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -900,6 +900,7 @@ nav[role="main-navigation"] .nav-item-small .dropdown-menu {
   border-color: #dae4e9;
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
+  z-index: 30;
   top: 100%;
   left: 0;
   margin: 0;
@@ -948,6 +949,7 @@ nav[role="main-navigation"] .nav-item-large .dropdown-menu {
   border-color: #dae4e9;
   -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
           box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
+  z-index: 30;
   top: 100%;
   left: 0;
   margin: 0;
